[tool.poetry]
name = "vt-tracker"
version = "0.1.0"
description = ""
authors = ["Cas-Cornelissen <cascornelissen07@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.4"
requests = "2.32.3"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
